<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


        <EditTextPreference
            android:defaultValue="@string/magnitude_default_value"
            android:inputType="number"
            android:singleLine="true"
            android:key="@string/magnitude_key"
            android:title="@string/magnitude_title"/>

        <EditTextPreference
            android:defaultValue="@string/time_start_default_value"
            android:inputType="date"
            android:singleLine="true"
            android:key="@string/time_start_key"
            android:title="@string/time_start_title"/>
        <EditTextPreference
            android:defaultValue="@string/time_end_default_value"
            android:inputType="date"
            android:singleLine="true"
            android:key="@string/time_end_key"
            android:title="@string/time_end_title"/>
        <ListPreference
            android:defaultValue="All"
            android:key="@string/location_key"
            android:title="@string/location_title"/>

</PreferenceScreen>